# FullStack

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .env  Dockerfile  docker-compose.yml  env.sample  pyproject.toml  requirements.txt
backend/initialize/: core_initialize.sh
backend/src/apps/todo/: admin.py  models.py  urls.py
backend/src/apps/todo/api/: serializers.py  urls.py  views.py
backend/src/apps/todo/migrations/: 0001_initial.py
backend/src/core/: settings.py  urls.py
frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/api/: api.js
frontend/src/features/todos/components/: TodoForm.jsx  TodoList.jsx
frontend/src/features/todos/components/store/: todoStore.js
frontend/src/pages/: Todos.jsx
frontend/src/styles/: global.css
postgres/: docker-compose.yml
postgres/secrets/: .env
