[tool.poetry]
name = "backend"
version = "0.0.1"
description = "FullStack"
authors = ["Mahdi <mahdighadiriafzal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "5.2"
gunicorn = "^23.0.0"
uvicorn = "^0.34.2"
python-decouple = "3.8"
psycopg = "^3.2.9"
psycopg-binary = "^3.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
