[tool.poetry]
name = "backend"
version = "0.0.1"
description = "FullStack"
authors = ["Mahdi <mahdighadiriafzal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "5.2"
gunicorn = "^23.0.0"
uvicorn = "^0.34.2"
python-decouple = "3.8"
psycopg = "^3.2.9"
psycopg-binary = "^3.2.9"
djangorestframework = "^3.16.0"
markdown = "^3.8"
django-filter = "^25.1"
drf-spectacular = "^0.28.0"
django-cors-headers = "^4.7.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
bandit = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
